# rage-cage-arm-hackstorm

./: README.md  compose.perception.yaml  package.xml  perception_foxglove_layout.json  pyproject.toml  requirements.txt  setup.cfg  setup.py
launch/: perception.launch.py
rl_learning/: README.md  pyproject.toml
rl_learning/docs/: ppo_reward_design.md  rage_cage_hackathon_prep.md  rage_cage_vla_primer.md  rl_experiment_log.md
rl_learning/docs/plans/: 2026-05-21-v38-curriculum-polar-cup-large-net.md  2026-05-22-no-ball-obs-design.md
rl_learning/models/random_pos_cup_thrower_v1/: README.md  vecnormalize.pkl
rl_learning/models/random_stack_cup_thrower_latency_robust_v1/: README.md  training.json  vecnormalize.pkl
rl_learning/models/random_stack_cup_thrower_no_ball_obs_v1/: README.md  vecnormalize.pkl
rl_learning/models/random_stack_cup_thrower_soft_gains_candidate/: README.md  vecnormalize.pkl
rl_learning/models/random_stack_cup_thrower_stage4_warmstart_v2/: README.md  vecnormalize.pkl
rl_learning/models/random_stack_cup_thrower_v1/: README.md  vecnormalize.pkl
rl_learning/models/single_bounce_cup_thrower_v1/: README.md  vecnormalize.pkl
rl_learning/scripts/: train_ppo.sh
rl_learning/sim/: env.py  eval_grid.py  eval_rl.py  play_policy.py  probe_apex.py  profile_train.py  record_trajectories.py  smoke_cup_weld.py  smoke_run_dir_layout.py  test_action_filter_latency.py  train_rl.py  watch_rollouts.py
rl_learning/sim/mjcf/: rage_cage.xml
rl_learning/sim/mjcf/agilex_piper/: piper.xml  scene.xml
ros2/: Dockerfile  compose.yaml
ros2/ws/: bbox.py  (+4 more)
(+181 files in other folders)
