[project]
name = "rage_cage_perception"
version = "0.1.0"
description = "Ping-pong ball 3D perception from ball 2D detection and table ArUco pose."
readme = "README.md"
dependencies = [
  "numpy>=1.24",
  "opencv-contrib-python>=4.8",
  "websocket-client>=1.7",
]

[project.scripts]
perception_node = "scripts.perception_node:main"

[tool.uv]
package = false
